mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_wrong_arg_count.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Function expects 2 arguments, got 1
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_wrong_arg_count.mux:5:10
   |
 5 | auto x = foo(1)
   |          ^^^
